message InstallCertificateCommandMessage {
    message Name {
        repeated bytes components = 8;
    }

    message InstallCertificateCommand {
        required Name certificateName = 222;
    }

    required InstallCertificateCommand command = 223;
}
